--- a/GhostChat-iOS/Base.lproj/Main.storyboard
+++ b/GhostChat-iOS/Base.lproj/Main.storyboard
@@ -74,6 +74,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="121" id="1B3-EH-pc8"/>
                                 </constraints>
+                                <color key="textColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
