--- a/GhostChat-iOS/Base.lproj/Main.storyboard
+++ b/GhostChat-iOS/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
                                     <constraint firstAttribute="width" constant="45" id="Hh2-aJ-Vh2"/>
                                     <constraint firstAttribute="height" constant="45" id="NWG-il-F6B"/>
                                 </constraints>
-                                <state key="normal" title="Send" image="Untitled-2.png">
+                                <state key="normal" title="Send" image="ghostg.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -154,6 +154,7 @@
                         <outlet property="myLabel" destination="zRw-7F-Szn" id="6Z7-21-8eJ"/>
                         <outlet property="myTextField" destination="Lc4-8H-e3Q" id="Lwy-Vo-Hbn"/>
                         <outlet property="nameField" destination="iJi-Rl-lOD" id="mEK-Ge-peh"/>
+                        <outlet property="send" destination="isk-yC-YM7" id="ewo-PN-7iA"/>
                         <outlet property="tableView" destination="hC3-CC-y27" id="aeH-OT-8fG"/>
                     </connections>
                 </viewController>
@@ -164,6 +165,6 @@
     </scenes>
     <resources>
         <image name="Refresh.png" width="100" height="100"/>
-        <image name="Untitled-2.png" width="100" height="100"/>
+        <image name="ghostg.png" width="800" height="800"/>
     </resources>
 </document>
